# ultima

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  Makefile  U2_Scheduler.h  main.cpp  phase1output.txt  phase3output.txt
.run/: Phase3_test.run.xml  Phase3_test_GUI.run.xml
ULTIMA/Evaluations_files/: document.css  part1.htm
ULTIMA/Introduction/: Combined Design Diagram.md  Combined Design Diagram.txt  Cover Page.docx  Cover Page.txt  Diagram Generator Prompt Pack.txt  Project Abstract 2.txt  Project Abstract.txt  README.md  Team Resumes.txt
ULTIMA/Phase 1 (Scheduler)/: Assignment Completion Checklist.txt  External Documentation 2.txt  External Documentation.txt  Makefile  Mem_mgr.cpp  Mem_mgr.h  Phase 1 Abstract.txt  Phase 1 Diagram.md  Phase 1 Diagram.txt  Phase 1 Submission Packet.docx  Sched.cpp  Sched.h  Sema.cpp  Sema.h  Test Plan and Output 2.txt  Test Plan and Output.txt  U2_Scheduler.h  U2_UI.cpp  U2_UI.h  U2_Window.cpp  U2_Window.h  Ultima  Ultima 2  Ultima 3  Ultima 4  Ultima 6  Ultima 7  Ultima.cpp  phase1output.txt  platform_curses.h  platform_threads.h  run_ultima_transcript.command  run_ultima_transcript.sh  run_ultima_ui.command  run_ultima_ui.sh  ultima_os  ultima_os 2  ultima_os 3  ultima_os 8
ULTIMA/Phase 1 (Scheduler)/Ultima.dSYM/Contents/: Info.plist
ULTIMA/Phase 1 (Scheduler)/Ultima.dSYM/Contents/Resources/DWARF/: Ultima
ULTIMA/Phase 1 (Scheduler)/Ultima.dSYM/Contents/Resources/Relocations/aarch64/: Ultima.yml
ULTIMA/Phase 1 (Scheduler)/Ultima_stub_test.dSYM/Contents/: Info.plist
ULTIMA/Phase 1 (Scheduler)/Ultima_stub_test.dSYM/Contents/Resources/DWARF/: Ultima_stub_test
ULTIMA/Phase 1 (Scheduler)/Ultima_stub_test.dSYM/Contents/Resources/Relocations/aarch64/: Ultima_stub_test.yml
ULTIMA/Phase 2 (IPC)/: BETTI_usage_phase2_secure_ipc.md  CMakeLists.txt  MCB.h  Makefile  Message.h  Nick.txt  PHASE4_STEP_WALKTHROUGH.md  Phase2_main.cpp  Sched.cpp  Sched.h  Sema_sync.cpp  U2_Scheduler.h  Zander.txt  betti_phase2_secure_ipc_commit_witness.jcs  betti_phase2_secure_ipc_commit_witness_verify.json  betti_phase2_secure_ipc_ichorir_morphir_lowering.json  betti_phase2_secure_ipc_live_profile.json  betti_phase2_secure_ipc_ratification_manifest.json  betti_phase2_secure_ipc_shadow_cells.json  betti_phase2_secure_ipc_snapshot_witness.jcs  betti_phase2_secure_ipc_snapshot_witness_verify.json  betti_secure_ipc_constitutional_security_note.md  betti_secure_ipc_evidence_bundle.md  betti_secure_ipc_ratification_gap_report.md  ipc.cpp  ipc.h  phase2_smoke_betti  phase2_smoke_betti 2  phase2_smoke_test  phase2_smoke_test 2  phase2_smoke_test.cpp  phase2_test  phase2_test 2  phase2_transcript.txt  phase_2_betti_secure_ipc_phase_ledger.md
ULTIMA/Phase 2 (IPC) 2/: betti_phase2_secure_ipc_genealogy.json  phase2_smoke_test
ULTIMA/Phase 3 (Memory Management)/: CMakeLists.txt  MCB.h  Makefile  PHASE3_CREATED_DELIVERABLES.md  PHASE3_PAPER_OUTLINE.md  PHASE3_STEP_WALKTHROUGH.md  PHASE3_TEST_PLAN.md  Phase 3 transcript.txt  Phase3_main.cpp  README.md  mmu.cpp  mmu.h  phase3_smoke_test  phase3_smoke_test 2  phase3_smoke_test.cpp  phase3_test  phase3_test 2  phase3_transcript.txt
ULTIMA/Phase 4 (IPC EC)/: BETTI_usage_phase2_secure_ipc 2.md  BETTI_usage_phase2_secure_ipc.md  CMakeLists.txt  Message.h  PHASE4_STEP_WALKTHROUGH.md  Phase2_main.cpp  Sched.cpp  Sched.h  betti_phase2_secure_ipc_artifact_fabric.json  betti_phase2_secure_ipc_commit_witness.jcs  betti_phase2_secure_ipc_commit_witness_verify.json  betti_phase2_secure_ipc_ratification_manifest.json  betti_phase2_secure_ipc_shadow_cells.json  betti_phase2_secure_ipc_snapshot_witness_verify.json  betti_phase2_secure_ipc_trusted_path_gate.json  betti_secure_ipc_constitutional_security_note.md  betti_secure_ipc_evidence_bundle.md  betti_secure_ipc_genealogy_record.md  ipc.h  phase2_smoke_betti  phase_2_betti_secure_ipc_phase_ledger.md
cmake/: UltimaPhase1Target.cmake
tmp/swift-module-cache/17SHTNHIHRNJA/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Cocoa-1MK6YYY84V08M.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  PDFKit-FTXXL1FCFMYT.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_intrinsics-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  (+17 more)
